# thaler-indexing

./: .gitignore  .golangci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  activity.go  block.go  chainindex_suite_test.go  coin.go  coin_test.go  councilnode.go  go.mod  go.sum  lint.sh  stakingaccount.go  test.sh
adapter/: activity.go  block.go  blockactivitydata.go  blockactivitydata_test.go  blockdata.go  blockdata_test.go  blockdataparser.go  blockdataparser_test.go  councilnode.go  doc.go  errors.go  mod_test.go  rdb.go  rdbpagination.go  repository.go  stakingaccount.go  stakingaccount_test.go
adapter/txauxdecoder/: Cargo.toml  bindings.h  build.rs  cbindgen.toml  lib.go  lib_test.go  txauxdecoder_suite_test.go
adapter/txauxdecoder/src/: lib.rs
api/: swagger.yml
config/: config.sample.toml
docker/: docker-compose.development.yml  docker-compose.sample.yml  docker-compose.test.yml
infrastructure/: pgx.go  pgx_test.go  zerolog.go  zerolog_test.go
migrations/: 20200428160316_create_blocks_table.up.sql  20200428171324_create_activity_type_enum.down.sql  20200428171324_create_activity_type_enum.up.sql  20200428175955_create_pubkey_type_enum.down.sql  20200428175955_create_pubkey_type_enum.up.sql  20200428182624_create_council_nodes_table.down.sql  20200428182624_create_council_nodes_table.up.sql  20200428183815_create_punishment_kind_enum.down.sql  20200428183815_create_punishmsnet_kind_enum.up.sql  20200428195712_create_staking_accounts_table.down.sql  20200428195712_create_staking_accounts_table.up.sql  (+16 more)
usecase/: blockdata.go  logger.go  (+2 more)
(+93 files in other folders)
