[package]
name = "txauxdecoder"
version = "0.0.1"
authors = ["Calvin Lau<calvinlauco@gmail.com"]
edition = "2018"

[lib]
name = "txauxdecoder"
crate-type = ["staticlib"]

[dependencies]
base64 = "0.12.1"
chain-core = { git = "https://github.com/crypto-com/chain", branch = "release/v0.5" }
chain-tx-validation = { git = "https://github.com/crypto-com/chain", branch = "release/v0.5" }
parity-scale-codec = { features = ["derive"], default-features = false, version = "1.3.0" }
serde = "1.0.110"
serde_json = "1.0.53"

[build-dependencies]
cbindgen = "0.14.2"
